# gamemstr-api

./: Cargo.toml  README.md  docker-compose.yml
.github/workflows/: rust.yml
migrations/2023-03-13-192910_items/: up.sql
migrations/2023-03-16-163242_worlds/: up.sql
migrations/2023-03-21-194740_create_spells/: up.sql
migrations/2023-03-23-213414_creature/: down.sql  up.sql
migrations/2023-04-01-232753_locations/: up.sql
migrations/2024-02-08-142012_sessions/: up.sql
migrations/2024-02-08-220006_campaigns/: up.sql
src/: main.rs  models.rs  schema.rs  services.rs
src/models/: creatures.rs  items.rs  spells.rs  worlds.rs
src/models/worlds/: campaigns.rs  locations.rs
src/models/worlds/campaigns/: sessions.rs
src/services/: creatures.rs  items.rs  spells.rs  worlds.rs
src/services/worlds/: campaigns.rs  locations.rs
src/services/worlds/campaigns/: sessions.rs
templates/: campaigns.html.hbs  creatures.html.hbs  items.html.hbs  locations.html.hbs  sessions.html.hbs  spells.html.hbs  worlds.html.hbs
