[package]
name = "gamemstr-api"
version = "0.1.0"
edition = "2021"
description = "API for the gamemstr project"
authors = ["James Wolff <james.wolff0@gmail.com>"]
homepage = "https://github.com/gamemstr/gamemstr-api"
repository = "https://github.com/gamemstr/gamemstr-api"
readme = "README.md"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custom_derive = "0.1.7"
diesel = { version = "2.2.4", features = ["postgres", "postgres_backend", "r2d2", "serde_json"] }
dotenvy = "0.15.6"
gamemstr-common = { git = "https://github.com/gamemstr/gamemstr-common.git", rev="eeb70ee8f9f4ec9decaf71d292ba8974fc3834b4"}
r2d2 = "0.8.10"
r2d2-diesel = "1.0.0"
rocket = { version = "0.5.1", features = ["json"] }
rocket_codegen = "0.5.1"
rocket_dyn_templates = {version = "0.2.0", features= ["handlebars"]}
serde = { version = "1.0.214", features = ["derive"] }
serde_derive = "1.0.214"
serde_json = "1.0.132"
